# spiral-galaxy-ic

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/spiral_galaxy_ic/: __init__.py
tests/: test_spiral_galaxy_ic.py
